# C2_Project_16

./: Cargo.toml
DB/: Movie_DB.mwb  Movie_DB.mwb.bak  ott자료.xlsx  p.txt  쿠팡플레이.xlsx  티빙.xlsx
DB/jwp/: db.php  index.html  info.html  method.php  mvinfo.php  ottdb_ott_table.sql
src/: main.rs
src/Web_content/: List.js  Web_content_Style.css  index.js  split_img.html
소스코드/: Rust scraper를 이용한 네이버 날씨 파싱 PROGRAMMING PER SE.url  러스트Rust로❤️머신러닝구축하기Machine_Learning 경제PLUS.url
