[package]
name = "C2_Project_16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"  # 웹 서버 열기
actix-http = "3.3.1"  # 웹 서버 열기
actix-web = "4.3.1" # 웹 서버 열기
actix-files = "0.6.2"

mysql = "24.0.0"

serde = { version = "1.0.163", features = ["derive"] }# JSON
serde_json = "1.0.96"  # JSON
serde_derive = "1.0.163"  # JSON